# ride-hailing

./: .env.sample  .gitignore  compose.yml  nginx.conf  pyproject.toml  readme.adoc
app/chat/: consumers.py
app/common/: enums.py  exceptions.py  fields.py  file_uploads.py  filter.py  kafka_producer.py  kgs.py  models.py  schema.py  serializers.py  views.py
app/core/: asgi.py  middleware.py  urls.py
app/core/settings/: base.py  database.py  logging.py  rest.py  storage.py
app/integrations/: base.py
app/integrations/location/: dataclass.py  google.py
app/location/: consumers.py  routing.py  utils.py
app/location/management/commands/: consume_trip_locations.py
app/trip/: enums.py  filters.py  models.py  tests.py  trip_match.py  utils.py
app/trip/management/commands/: seed_trip_config.py
app/trip/migrations/: 0001_initial.py
app/trip/v1/: serializers.py  views.py
app/trip/v1/urls/: trip.py
app/user/: admin.py  apps.py  enums.py  managers.py  models.py  permissions.py  signals.py  tasks.py  utils.py
app/user/migrations/: 0001_initial.py
app/user/templates/emails/: account_verification_template.html  (+4 more)
app/user/tests/: test_models.py  test_user_roles.py
app/user/v1/: serializers.py  views.py
docker/api/: Dockerfile  entrypoint.sh
docker/celery/: Dockerfile-celery  entrypoint-celery.sh
docker/test/: Dockerfile-test
kafka/data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
kafka/data/__consumer_offsets-15/: partition.metadata
kafka/data/trip_location_updates-0/: partition.metadata
(+2 files in other folders)
